hito13: test de cobertura Close #41
- Se agrega tarea coverage a make
- Se agrega make coverage a CICD.yml
- Se agrega badge y como correr test de cobertura a README.md

--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -28,7 +28,10 @@ jobs:
     - name: Run testing
       run: make test
 
-    - name: up code coverage
+    - name: Run coverage
+      run: make coverage
+
+    - name: Upload coverage
       - uses: actions/checkout@master
       - uses: codecov/codecov-actions@v1
         with:
