--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -31,10 +31,9 @@ jobs:
     - name: Run coverage
       run: make coverage
 
-    - name: Upload coverage
+    - name: Upload coverage o codecov
       - uses: actions/checkout@master
-      - uses: codecov/codecov-actions@v1
+      - uses: codecov/codecov-action@v1
         with:
-          token: ${{ secrets.CODECOV_TOKEN }} # this is because is into organization 
-          flags: unittests
-      run: bash <(curl -s https://codecov.io/bash)
+          token: ${{ secrets.CODECOV_TOKEN }}
+          verbose: true
