--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -8,32 +8,33 @@ jobs:
         os: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.os }}
     steps:
-    - name: Install Go
-      uses: actions/setup-go@v2
-      with:
-        go-version: ${{ matrix.go-version }}
-
-    - name: Intall dependencies
-      run: |
-        go version
-        go get -u golang.org/x/lint/golinto version
-        go get -u github.com/stretchr/testify/assert
-
-    - name: Checkout code
-      uses: actions/checkout@v2
-
-    - name: Run vet & lint
-      uses: make check
-
-    - name: Run testing
-      run: make test
-
-    - name: Run coverage
-      run: make coverage
-
-    - name: Upload coverage o codecov
-      - uses: actions/checkout@master
-      - uses: codecov/codecov-action@v1
+      - name: Install Go
+        uses: actions/setup-go@v2
         with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          verbose: true
+          go-version: ${{ matrix.go-version }}
+
+      - name: Install dependencies
+        run: |
+          go version
+          go get -u golang.org/x/lint/golinto version
+          go get -u github.com/stretchr/testify/assert
+
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Run vet & lint
+        uses: make check
+
+      - name: Run testing
+        run: make test
+
+      - name: Run coverage
+        run: make coverage
+
+      - name: Upload coverage
+        - uses: actions/checkout@master
+        - uses: codecov/codecov-action@v1
+          with:
+            token: ${{ secrets.CODECOV_TOKEN }}
+            verbose: true
+
