--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -32,9 +32,9 @@ jobs:
         run: make coverage
 
       - name: Upload coverage
-        - uses: actions/checkout@master
-        - uses: codecov/codecov-action@v1
-          with:
-            token: ${{ secrets.CODECOV_TOKEN }}
-            verbose: true
+        uses: actions/checkout@master
+        uses: codecov/codecov-action@v1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          verbose: true
 
