--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -4,7 +4,7 @@ jobs:
   test:
     strategy:
       matrix:
-        go-version: [1.15.x,1.16.x]
+        go-version: [1.16.x]
         os: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.os }}
     steps:
@@ -16,14 +16,13 @@ jobs:
       - name: Install dependencies
         run: |
           go version
-          go get -u golang.org/x/lint/golinto version
           go get -u github.com/stretchr/testify/assert
 
       - name: Checkout code
         uses: actions/checkout@v2
 
       - name: Run vet & lint
-        uses: make check
+        run: make check
 
       - name: Run testing
         run: make test
@@ -32,9 +31,8 @@ jobs:
         run: make coverage
 
       - name: Upload coverage
-        - uses: actions/checkout@master
-        - uses: codecov/codecov-action@v1
-          with:
-            token: ${{ secrets.CODECOV_TOKEN }}
-            verbose: true
+        uses: codecov/codecov-action@v1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          verbose: true
 
